# apptalk

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  build.sh  database.py  docker-compose.yml  pyproject.toml  requirements.txt  routes.py
.github/workflows/: ci.yml
apptalk/: __init__.py  database.py  database.py~  encryption.py  routes.py  token.py
database/: database.sql
sql/: schema.sql
sql/tests/: data.sql
static/: chat_style.css  main.css  mediaquery_chat_style.css  mediaquery_main.css  mediaquery_style.css  style.css
templates/: _base.html  chat.html  contacts.html  index.html  login.html  signup.html
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py
